Closed Bug 1829325 Opened 2 years ago Closed 2 years ago

Intermittent TV toolkit/components/places/tests/browser/browser_redirect_self.js | Uncaught exception in test bound - undefined - timed out after 50 tries.

Categories

(Toolkit :: Places, defect, P5)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- unaffected
firefox114 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mak)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, test-verify-fail)

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=413271979&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/EkQaK72aSgeOz52U6GKa6g/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/EkQaK72aSgeOz52U6GKa6g/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2023-04-21T09:58:12.605Z] 09:58:12     INFO - TEST-PASS | toolkit/components/places/tests/browser/browser_redirect_self.js | The visit should be hidden - true == true - 
[task 2023-04-21T09:58:12.606Z] 09:58:12     INFO - Console message: [JavaScript Warning: "Cookie “redirect-self” does not have a proper “SameSite” attribute value. Soon, cookies without the “SameSite” attribute or with an invalid value will be treated as “Lax”. This means that the cookie will no longer be sent in third-party contexts. If your application depends on this cookie being available in such contexts, please add the “SameSite=None“ attribute to it. To know more about the “SameSite“ attribute, read https://developer.mozilla.org/docs/Web/HTTP/Headers/Set-Cookie/SameSite" {file: "http://mochi.test:8888/tests/toolkit/components/places/tests/browser/redirect_self.sjs" line: 0}]
[task 2023-04-21T09:58:12.606Z] 09:58:12     INFO - Console message: [JavaScript Warning: "Cookie “redirect-self” has been rejected because it is already expired." {file: "http://mochi.test:8888/tests/toolkit/components/places/tests/browser/redirect_self.sjs" line: 0}]
[task 2023-04-21T09:58:12.606Z] 09:58:12     INFO - Buffered messages finished
[task 2023-04-21T09:58:12.606Z] 09:58:12     INFO - TEST-UNEXPECTED-FAIL | toolkit/components/places/tests/browser/browser_redirect_self.js | Uncaught exception in test bound  - undefined - timed out after 50 tries.
[task 2023-04-21T09:58:12.607Z] 09:58:12     INFO - Leaving test bound 
[task 2023-04-21T09:58:12.862Z] 09:58:12     INFO - GECKO(2596) | MEMORY STAT | vsize 3275MB | residentFast 467MB | heapAllocated 209MB
[task 2023-04-21T09:58:12.863Z] 09:58:12     INFO - TEST-OK | toolkit/components/places/tests/browser/browser_redirect_self.js | took 5830ms
Flags: needinfo?(mak)

TV only runs when a test is modified that is what activated this, my changes should not be involved in this timeout. That said, I can reproduce so I'll try to fix it.

Assignee: nobody → mak
Status: NEW → ASSIGNED
Flags: needinfo?(mak)

Set release status flags based on info from the regressing bug 1829192

Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/3794d44d7ce1 Allow to clear Places History recent URIs cache. r=daisuke
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: