Bug 1829325 - Allow to clear Places History recent URIs cache. r=daisuke

Differential Revision: https://phabricator.services.mozilla.com/D176161