toolkit/components/places/History.cpp
@@ -56,10 +56,8 @@
 
 using namespace mozilla::dom;
 using namespace mozilla::ipc;
-using mozilla::Unused;
 
-namespace mozilla {
-namespace places {
+namespace mozilla::places {
 
 ////////////////////////////////////////////////////////////////////////////////
 //// Global Defines
@@ -330,9 +328,8 @@ void GetStringFromJSObject(JSContext* aCtx, JS::Handle<JSObject*> aObject,
   if (!rc) {
     _string.SetIsVoid(true);
     return;
-  } else {
-    GetJSValueAsString(aCtx, val, _string);
   }
+  GetJSValueAsString(aCtx, val, _string);
 }
 
 /**
@@ -951,7 +948,7 @@ class InsertVisitedURIs final : public Runnable {
       NS_ENSURE_SUCCESS(rv, rv);
 
       if (shouldChunkNotifications) {
-        int32_t numRemaining = mPlaces.Length() - (i + 1);
+        int32_t numRemaining = (int32_t)(mPlaces.Length() - (i + 1));
         notificationChunk.AppendElement(place);
         if (notificationChunk.Length() == NOTIFY_VISITS_CHUNK_SIZE ||
             numRemaining == 0) {
@@ -1142,7 +1139,7 @@ class InsertVisitedURIs final : public Runnable {
     MOZ_ASSERT(transitionType >= nsINavHistoryService::TRANSITION_LINK &&
                    transitionType <= nsINavHistoryService::TRANSITION_RELOAD,
                "Invalid transition type!");
-    rv = stmt->BindInt32ByName("visit_type"_ns, transitionType);
+    rv = stmt->BindInt32ByName("visit_type"_ns, (int32_t)transitionType);
     NS_ENSURE_SUCCESS(rv, rv);
     rv = stmt->BindInt32ByName("source"_ns, _place.source);
     NS_ENSURE_SUCCESS(rv, rv);
@@ -2286,6 +2283,12 @@ History::IsURIVisited(nsIURI* aURI, mozIVisitedStatusCallback* aCallback) {
   return VisitedQuery::Start(aURI, aCallback);
 }
 
+NS_IMETHODIMP
+History::ClearCache() {
+  mRecentlyVisitedURIs.Clear();
+  return NS_OK;
+}
+
 void History::StartPendingVisitedQueries(PendingVisitedQueries&& aQueries) {
   if (XRE_IsContentProcess()) {
     auto* cpc = dom::ContentChild::GetSingleton();
@@ -2346,5 +2349,4 @@ History::Observe(nsISupports* aSubject, const char* aTopic,
 NS_IMPL_ISUPPORTS(History, IHistory, mozIAsyncHistory, nsIObserver,
                   nsIMemoryReporter)
 
-}  // namespace places
-}  // namespace mozilla
+}  // namespace mozilla::places
